# HaploGI

./: CITATION.cff  CMakeLists.txt  README.html  README.md
HaploGI_utility_scripts/: README.md
HaploGI_utility_scripts/input_files_preparation/decrease_number_of_MI_iterations/: README.md  decrease_number_of_MI_iterations.py
HaploGI_utility_scripts/input_files_preparation/dicrease_number_of_MI_iterations/: README.md  dicrease_number_of_MI_iterations.py
HaploGI_utility_scripts/input_files_preparation/prepare_genotype_file/: README.md  prepare_genotype_file.py
HaploGI_utility_scripts/output_files_processing/create_genomic_windows_file/: README.md  create_genomic_windows.py
HaploGI_utility_scripts/output_files_processing/phased_genotypes_to_VCF/: README.md  create_phased_vcf.py
HaploGI_utility_scripts/output_files_processing/plot_haplotype_sharing/: README.md  plot_haplotype_sharing.py
HaploGI_utility_scripts/output_files_processing/risk_haplotype_sequence_to_VCF/: README.md  risk_haplotype_sequence_vcf.py
HaploGI_utility_scripts/output_files_processing/variants_with_alleles_unique_to_risk_haplotype/: README.md  risk_alleles_variants.py
data_example/: README.md
data_example/background/: chr16_ped52_LOD_scores.txt
docs/: README.md  parameter_file_template.txt
src/: HaploGI.cpp
